--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500;700&family=Lexend:wght@500;700&display=swap"
     rel="stylesheet">
-  <title>React App</title>
+  <title>Ultimate Carousel</title>
 </head>
 
 <body>
